--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "@svgr/webpack": "^6.5.1",
+    "daisyui": "^2.49.0",
+    "lodash.get": "^4.4.2",
+    "lodash.throttle": "^4.1.1",
+    "next": "^12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
